--- a/sio2web/sio2web.html
+++ b/sio2web/sio2web.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="favicon.ico" />
-<img  src="karai.png" alt="KARAI">
+<a href="https://github.com/dcerisano/karai">
+<img  src="karai.png" alt="KARAI"></a>
 <title>ASYNC SIO2WEB</title>
 <h1>ASYNC SIO2WEB</h1>
 <br>1) Connect SIO2PC adapter
