--- a/sio2web/sio2web.html
+++ b/sio2web/sio2web.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:image" content="https://github.com/dcerisano/karai/karai.png" />
 <link rel="shortcut icon" href="favicon.ico" />
 <a href="https://github.com/dcerisano/karai">
 <img  src="karai.png" alt="KARAI"></a>
