--- a/sio2web/sio2web.html
+++ b/sio2web/sio2web.html
@@ -6,7 +6,7 @@
 <meta property="og:image" content="https://dcerisano.github.io/karai1.png" />
 <link rel="shortcut icon" href="favicon.ico" />
 <a href="https://github.com/dcerisano/karai">
-<img  src="karai1.png" alt="KARAI"></a>
+<img  src="sio2web.png" alt="KARAI"></a>
 <title>ASYNC SIO2WEB</title>
 <h1>ASYNC SIO2WEB</h1>
 <br>1) Connect SIO2PC adapter
