--- a/sio2web/sio2web.html
+++ b/sio2web/sio2web.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:image" content="https://dcerisano.github.io/karai.png" />
+<meta property="og:image" content="https://dcerisano.github.io/sio2web.png" />
 <link rel="shortcut icon" href="favicon.ico" />
 <a href="https://github.com/dcerisano/karai">
 <img  src="sio2web.png" alt="KARAI"></a>
