--- a/sio2web/index.html
+++ b/sio2web/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:image" content="https://https://github.com/dcerisano/karai/blob/main/karai-cover.png" />
-<link rel="shortcut icon" href="favicon.ico" />
+<meta property="og:image" content="https://dcerisano.github.io/karai/karai-hd.png" />
+<link rel="shortcut icon" href="../favicon.ico" />
 <a href="https://github.com/dcerisano/karai">
 <img  src="sio2web.png" alt="KARAI"></a>
 <title>ASYNC SIO2WEB</title>
